	* Fix bug #9542 (old bug tracker): Required for checkbox doesn't work
	* Fix bug #8432 (old bug tracker): Required checkbox of extended fe_user table is not required when registering in the FE
	* Add feature #35931: Allow to show terms of usage on page or url
	* Add feature #15100 (old bug tracker): How to include terms of use in registration form

2012-04-11 Stanislas Rolland  <typo3@sjbr.ca>
	* Follow-up 4 to feature #35805: Display message in frontend if required extension is not loaded
	* Add feature #35878: Issue error message if FE login security level is not set to "normal" or to "rsa"
	* Add feature #35881: Add a status report about the installation of the extension (TYPO3 4.6+ only)
	* Fix bug #35882: Corrections to template subpart for "terms acknowledged"
	* Follow-up to feature #35881: Add a status report about the installation of the extension (TYPO3 4.6+ only)
	* Follow-up 5 to feature #35805: Drop requirement for ADOdb Date Library
	* Add feature #35883: Always use flexforms
	* Add feature #35884: Add support for middle name

2012-04-10 Stanislas Rolland  <typo3@sjbr.ca>
	* Follow-up 1 to feature #35805: Require system extension adodb
	* Follow-up 9 to feature #34447: Do not show tx_srfeuserregister_password in HTML source
	* Follow-up to #15174 (old bug tracker): Incorrect test of absence of required value
	* Fix bug #35833: Password update on accepting invitation may not work
	* Follow-up 2 to feature #35805: Write error to syslog if required extension is not loaded
	* Follow-up 3 to feature #35805: Always use adodb Date library for timestamp conversion
	
2012-04-09 Stanislas Rolland  <typo3@sjbr.ca>
	* Fix bug #15174 (old bug tracker): Doesn't allow update of user group
	* Fix bug #10435 (old bug tracker): Error messages when country is changed while no user group is selected in frontend
	* Cleanup line breaks in rsaauth.js
	* Fix bug #14020 (old bug tracker): user groups from userGroupAfterConfirmation are visible in the invitation form