@@ -174,6 +174,8 @@
 			<label index="module_sys_dmail_html_informal">Receive HTML e-mails?</label>
 			<label index="yes">Yes</label>
 			<label index="no">No</label>
+			<label index="module_sys_dmail_newsletter">Receive newsletter?</label>
+			<label index="module_sys_dmail_newletter_informal">Receive newsletter?</label>
 			<label index="module_sys_dmail_category">Receive news on any of these subjects?</label>
 			<label index="module_sys_dmail_category_informal">Receive news on any of these subjects?</label>
 			<label index="missing_module_sys_dmail_category">Please select at least one subject!</label>
