@@ -330,6 +330,18 @@
 	</dd>
 	<!-- ###SUB_INCLUDED_FIELD_usergroup### -->
 
+	<!-- ###SUB_INCLUDED_FIELD_module_sys_dmail_newsletter### -->
+	<dt>
+		<label for="tx-srfeuserregister-pi1-module_sys_dmail_newsletter">###LABEL_MODULE_SYS_DMAIL_NEWSLETTER### ###REQUIRED_MODULE_SYS_DMAIL_NEWSLETTER###</label>
+	</dt>
+	<dd>
+		<!-- ###SUB_REQUIRED_FIELD_module_sys_dmail_newsletter### -->
+		<p class="tx-srfeuserregister-pi1-error">###MISSING_MODULE_SYS_DMAIL_NEWSLETTER###</p>
+		<!-- ###SUB_REQUIRED_FIELD_module_sys_dmail_newsletter### -->
+		###TCA_INPUT_module_sys_dmail_newsletter###
+	</dd>
+	<!-- ###SUB_INCLUDED_FIELD_module_sys_dmail_newsletter### -->
+
 	<!-- ###SUB_INCLUDED_FIELD_module_sys_dmail_category### -->
 	<dt>
 		<label for="tx-srfeuserregister-pi1-module_sys_dmail_category">###LABEL_MODULE_SYS_DMAIL_CATEGORY### ###REQUIRED_MODULE_SYS_DMAIL_CATEGORY###</label>
@@ -560,6 +572,11 @@
 <dt>###LABEL_USERGROUP###</dt>
 <dd>###TCA_INPUT_usergroup###&nbsp;</dd>
 <!-- ###SUB_INCLUDED_FIELD_usergroup### -->
+
+<!-- ###SUB_INCLUDED_FIELD_module_sys_dmail_newsletter### -->
+<dt>###LABEL_MODULE_SYS_DMAIL_NEWSLETTER###</dt>
+<dd>###TCA_INPUT_module_sys_dmail_newsletter###&nbsp;</dd>
+<!-- ###SUB_INCLUDED_FIELD_module_sys_dmail_newsletter### -->
 
 <!-- ###SUB_INCLUDED_FIELD_module_sys_dmail_category### -->
 <dt>###LABEL_MODULE_SYS_DMAIL_CATEGORY###</dt>
@@ -986,6 +1003,18 @@ The user is informed that a message has been sent to his email address and that 
 	</dd>
 	<!-- ###SUB_INCLUDED_FIELD_usergroup### -->
 
+	<!-- ###SUB_INCLUDED_FIELD_module_sys_dmail_newsletter### -->
+	<dt>
+		<label for="tx-srfeuserregister-pi1-module_sys_dmail_newsletter">###LABEL_MODULE_SYS_DMAIL_NEWSLETTER### ###REQUIRED_MODULE_SYS_DMAIL_NEWSLETTER###</label>
+	</dt>
+	<dd>
+		<!-- ###SUB_REQUIRED_FIELD_module_sys_dmail_newsletter### -->
+		<p class="tx-srfeuserregister-pi1-error">###MISSING_MODULE_SYS_DMAIL_NEWSLETTER###</p>
+		<!-- ###SUB_REQUIRED_FIELD_module_sys_dmail_newsletter### -->
+		###TCA_INPUT_module_sys_dmail_newsletter###
+	</dd>
+	<!-- ###SUB_INCLUDED_FIELD_module_sys_dmail_newsletter### -->
+
 	<!-- ###SUB_INCLUDED_FIELD_module_sys_dmail_category### -->
 	<dt>
 		<label for="tx-srfeuserregister-pi1-module_sys_dmail_category">###LABEL_MODULE_SYS_DMAIL_CATEGORY### ###REQUIRED_MODULE_SYS_DMAIL_CATEGORY###</label>
@@ -1189,6 +1218,11 @@ The user is informed that a message has been sent to his email address and that 
 <dt>###LABEL_USERGROUP###</dt>
 <dd>###TCA_INPUT_usergroup###&nbsp;</dd>
 <!-- ###SUB_INCLUDED_FIELD_usergroup### -->
+
+<!-- ###SUB_INCLUDED_FIELD_module_sys_dmail_newsletter### -->
+<dt>###LABEL_MODULE_SYS_DMAIL_NEWSLETTER###</dt>
+<dd>###TCA_INPUT_module_sys_dmail_newsletter###&nbsp;</dd>
+<!-- ###SUB_INCLUDED_FIELD_module_sys_dmail_newsletter### -->
 
 <!-- ###SUB_INCLUDED_FIELD_module_sys_dmail_category### -->
 <dt>###LABEL_MODULE_SYS_DMAIL_CATEGORY###</dt>
@@ -1554,6 +1588,18 @@ The user is informed that a message has been sent to the email address and that 
 	</dd>
 	<!-- ###SUB_INCLUDED_FIELD_usergroup### -->
 
+	<!-- ###SUB_INCLUDED_FIELD_module_sys_dmail_newsletter### -->
+	<dt>
+		<label for="tx-srfeuserregister-pi1-module_sys_dmail_newsletter">###LABEL_MODULE_SYS_DMAIL_NEWSLETTER### ###REQUIRED_MODULE_SYS_DMAIL_NEWSLETTER###</label>
+	</dt>
+	<dd>
+		<!-- ###SUB_REQUIRED_FIELD_module_sys_dmail_newsletter### -->
+		<p class="tx-srfeuserregister-pi1-error">###MISSING_MODULE_SYS_DMAIL_NEWSLETTER###</p>
+		<!-- ###SUB_REQUIRED_FIELD_module_sys_dmail_newsletter### -->
+		###TCA_INPUT_module_sys_dmail_newsletter###
+	</dd>
+	<!-- ###SUB_INCLUDED_FIELD_module_sys_dmail_newsletter### -->
+
 	<!-- ###SUB_INCLUDED_FIELD_module_sys_dmail_category### -->
 	<dt>
 		<label for="tx-srfeuserregister-pi1-module_sys_dmail_category">###LABEL_MODULE_SYS_DMAIL_CATEGORY### ###REQUIRED_MODULE_SYS_DMAIL_CATEGORY###</label>
@@ -1786,6 +1832,11 @@ The user is informed that a message has been sent to the email address and that 
 <dt>###LABEL_USERGROUP###</dt>
 <dd>###TCA_INPUT_usergroup###&nbsp;</dd>
 <!-- ###SUB_INCLUDED_FIELD_usergroup### -->
+
+<!-- ###SUB_INCLUDED_FIELD_module_sys_dmail_newsletter### -->
+<dt>###LABEL_MODULE_SYS_DMAIL_NEWSLETTER###</dt>
+<dd>###TCA_INPUT_module_sys_dmail_newsletter###&nbsp;</dd>
+<!-- ###SUB_INCLUDED_FIELD_module_sys_dmail_newsletter### -->
 
 <!-- ###SUB_INCLUDED_FIELD_module_sys_dmail_category### -->
 <dt>###LABEL_MODULE_SYS_DMAIL_CATEGORY###</dt>
@@ -2501,6 +2552,11 @@ The user is informed that a message has been sent to the email address and that 
 <dd>###TCA_INPUT_usergroup###</dd>
 <!-- ###SUB_INCLUDED_FIELD_usergroup### -->
 
+<!-- ###SUB_INCLUDED_FIELD_module_sys_dmail_newsletter### -->
+<dt>###LABEL_MODULE_SYS_DMAIL_NEWSLETTER###</dt>
+<dd>###TCA_INPUT_module_sys_dmail_newsletter###&nbsp;</dd>
+<!-- ###SUB_INCLUDED_FIELD_module_sys_dmail_newsletter### -->
+
 <!-- ###SUB_INCLUDED_FIELD_module_sys_dmail_category### -->
 <dt>###LABEL_MODULE_SYS_DMAIL_CATEGORY###</dt>
 <dd>###TCA_INPUT_module_sys_dmail_category###</dd>
@@ -2576,6 +2632,7 @@ The user is informed that a message has been sent to the email address and that 
 <!-- ###SUB_INCLUDED_FIELD_fax### -->###LABEL_FAX### ###FIELD_fax###<!-- ###SUB_INCLUDED_FIELD_fax### -->
 <!-- ###SUB_INCLUDED_FIELD_email### -->###LABEL_EMAIL### ###FIELD_email###<!-- ###SUB_INCLUDED_FIELD_email### -->
 <!-- ###SUB_INCLUDED_FIELD_usergroup### -->###LABEL_USERGROUP### ###TCA_INPUT_usergroup###<!-- ###SUB_INCLUDED_FIELD_usergroup### -->
+<!-- ###SUB_INCLUDED_FIELD_module_sys_dmail_newsletter### -->###LABEL_MODULE_SYS_DMAIL_NEWSLETTER### ###LABEL_MODULE_SYS_DMAIL_NEWSLETTER_CHECKED###<!-- ###SUB_INCLUDED_FIELD_module_sys_dmail_newsletter### -->
 <!-- ###SUB_INCLUDED_FIELD_module_sys_dmail_category### -->###LABEL_MODULE_SYS_DMAIL_CATEGORY### ###TCA_INPUT_module_sys_dmail_category###<!-- ###SUB_INCLUDED_FIELD_module_sys_dmail_category### -->
 <!-- ###SUB_INCLUDED_FIELD_module_sys_dmail_html### -->###LABEL_MODULE_SYS_DMAIL_HTML### ###LABEL_MODULE_SYS_DMAIL_HTML_CHECKED###<!-- ###SUB_INCLUDED_FIELD_module_sys_dmail_html### -->
 <!-- ###SUB_INCLUDED_FIELD_terms_acknowledged### -->###LABEL_TERMS_ACKNOWLEDGED### ###LABEL_TERMS_ACKNOWLEDGED_CHECKED###<!-- ###SUB_INCLUDED_FIELD_terms_acknowledged### -->
