@@ -7,6 +7,7 @@
 	* Fix bug #8432 (old bug tracker): Required checkbox of extended fe_user table is not required when registering in the FE
 	* Add feature #35931: Allow to show terms of usage on page or url
 	* Add feature #15100 (old bug tracker): How to include terms of use in registration form
+	* Add feature #18009 (old bug tracker): Add module_sys_dmail_newsletter to tx_srfeuserregister_pi1_css_tmpl.html (Thanks to Tobias Schaefer)
 
 2012-04-11 Stanislas Rolland  <typo3@sjbr.ca>
 	* Follow-up 4 to feature #35805: Display message in frontend if required extension is not loaded
